[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Art/PressUp.png" type="Texture" id=1]
[ext_resource path="res://UI/Art/Up.png" type="Texture" id=2]
[ext_resource path="res://UI/Art/PressDown.png" type="Texture" id=3]
[ext_resource path="res://UI/Art/Down.png" type="Texture" id=4]
[ext_resource path="res://UI/Art/HoverDown.png" type="Texture" id=5]
[ext_resource path="res://UI/Art/HoverUp.png" type="Texture" id=6]
[ext_resource path="res://IndieFlower-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI/Art/currency-scaled.png" type="Texture" id=8]
[ext_resource path="res://UI/Shop.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Shop" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.05054
margin_bottom = -2.05054
color = Color( 0.219608, 0.207843, 0.207843, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.00002
margin_bottom = 1.0
theme = SubResource( 2 )
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerUpgrades" type="VBoxContainer" parent="Shop"]
margin_top = 41.0
margin_right = 1024.0
margin_bottom = 191.0
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Shop/PlayerUpgrades"]
margin_right = 1024.0
margin_bottom = 42.0
text = "Player Upgrades"
align = 1

[node name="Abilities" type="HBoxContainer" parent="Shop/PlayerUpgrades"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 150.0
custom_constants/separation = 50
alignment = 1

[node name="Health" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities"]
margin_left = 99.0
margin_right = 337.0
margin_bottom = 88.0
alignment = 1

[node name="MH_Down" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/Health"]
margin_right = 32.0
margin_bottom = 88.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/PlayerUpgrades/Abilities/Health"]
margin_left = 36.0
margin_right = 202.0
margin_bottom = 88.0
alignment = 2

[node name="MHLabel" type="Label" parent="Shop/PlayerUpgrades/Abilities/Health/VBoxContainer"]
margin_right = 166.0
margin_bottom = 42.0
text = "Max Health: 100"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities/Health/VBoxContainer"]
margin_top = 46.0
margin_right = 166.0
margin_bottom = 88.0
alignment = 1

[node name="MHCost" type="Label" parent="Shop/PlayerUpgrades/Abilities/Health/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 81.0
margin_bottom = 42.0
text = "100"

[node name="TextureRect" type="TextureRect" parent="Shop/PlayerUpgrades/Abilities/Health/VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 117.0
margin_bottom = 42.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="MH_Up" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/Health"]
margin_left = 206.0
margin_right = 238.0
margin_bottom = 88.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="MaxSkelly" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities"]
margin_left = 387.0
margin_right = 611.0
margin_bottom = 88.0
alignment = 1

[node name="PMS_down" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly"]
margin_right = 32.0
margin_bottom = 88.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly"]
margin_left = 36.0
margin_right = 188.0
margin_bottom = 88.0
alignment = 2

[node name="PMSLabel" type="Label" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly/VBoxContainer"]
margin_right = 152.0
margin_bottom = 42.0
text = "Max Skellys: 1"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly/VBoxContainer"]
margin_top = 46.0
margin_right = 152.0
margin_bottom = 88.0
alignment = 1

[node name="PMSCost" type="Label" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 74.0
margin_bottom = 42.0
text = "100"

[node name="TextureRect" type="TextureRect" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 110.0
margin_bottom = 42.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="PMS_Up" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/MaxSkelly"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 88.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="FlamingSkull" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities"]
margin_left = 661.0
margin_right = 925.0
margin_bottom = 88.0
alignment = 1

[node name="SkullDown" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull"]
margin_right = 32.0
margin_bottom = 88.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull"]
margin_left = 36.0
margin_right = 228.0
margin_bottom = 88.0
alignment = 2

[node name="SDLabel" type="Label" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull/VBoxContainer"]
margin_right = 192.0
margin_bottom = 42.0
text = "Skull Damage: +0"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull/VBoxContainer"]
margin_top = 46.0
margin_right = 192.0
margin_bottom = 88.0
alignment = 1

[node name="SDCost" type="Label" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 94.0
margin_bottom = 42.0
text = "100"

[node name="TextureRect" type="TextureRect" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 130.0
margin_bottom = 42.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="SkullUp" type="TextureButton" parent="Shop/PlayerUpgrades/Abilities/FlamingSkull"]
margin_left = 232.0
margin_right = 264.0
margin_bottom = 88.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="SkellyUpgrades" type="VBoxContainer" parent="Shop"]
margin_top = 271.0
margin_right = 1024.0
margin_bottom = 431.0
custom_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Shop/SkellyUpgrades"]
margin_right = 1024.0
margin_bottom = 42.0
text = "Skelly Upgrades"
align = 1

[node name="Abilities" type="HBoxContainer" parent="Shop/SkellyUpgrades"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 160.0
custom_constants/separation = 50
alignment = 1

[node name="Health" type="HBoxContainer" parent="Shop/SkellyUpgrades/Abilities"]
margin_left = 266.0
margin_right = 504.0
margin_bottom = 88.0
alignment = 1

[node name="SKHDown" type="TextureButton" parent="Shop/SkellyUpgrades/Abilities/Health"]
margin_right = 32.0
margin_bottom = 88.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/SkellyUpgrades/Abilities/Health"]
margin_left = 36.0
margin_right = 202.0
margin_bottom = 88.0
alignment = 2

[node name="SKHLabel" type="Label" parent="Shop/SkellyUpgrades/Abilities/Health/VBoxContainer"]
margin_right = 166.0
margin_bottom = 42.0
text = "Max Health: 100"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/SkellyUpgrades/Abilities/Health/VBoxContainer"]
margin_top = 46.0
margin_right = 166.0
margin_bottom = 88.0
alignment = 1

[node name="SKHCost" type="Label" parent="Shop/SkellyUpgrades/Abilities/Health/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 81.0
margin_bottom = 42.0
text = "100"

[node name="TextureRect" type="TextureRect" parent="Shop/SkellyUpgrades/Abilities/Health/VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 117.0
margin_bottom = 42.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="SKHup" type="TextureButton" parent="Shop/SkellyUpgrades/Abilities/Health"]
margin_left = 206.0
margin_right = 238.0
margin_bottom = 88.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="MaxSkelly" type="HBoxContainer" parent="Shop/SkellyUpgrades/Abilities"]
margin_left = 554.0
margin_right = 758.0
margin_bottom = 88.0
alignment = 1

[node name="DamageDown" type="TextureButton" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly"]
margin_right = 32.0
margin_bottom = 88.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly"]
margin_left = 36.0
margin_right = 168.0
margin_bottom = 88.0
alignment = 2

[node name="DamageLabel" type="Label" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly/VBoxContainer"]
margin_right = 132.0
margin_bottom = 42.0
text = "Damage: +0"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly/VBoxContainer"]
margin_top = 46.0
margin_right = 132.0
margin_bottom = 88.0
alignment = 1

[node name="DamageCost" type="Label" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly/VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 64.0
margin_bottom = 42.0
text = "100"

[node name="TextureRect" type="TextureRect" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 100.0
margin_bottom = 42.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="DamageUp" type="TextureButton" parent="Shop/SkellyUpgrades/Abilities/MaxSkelly"]
margin_left = 172.0
margin_right = 204.0
margin_bottom = 88.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Shop"]
margin_top = 511.0
margin_right = 1024.0
margin_bottom = 559.0
custom_constants/separation = 300
alignment = 1

[node name="Close" type="Button" parent="Shop/HBoxContainer"]
margin_left = 474.0
margin_right = 549.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Leave"
[connection signal="button_down" from="Shop/PlayerUpgrades/Abilities/Health/MH_Down" to="." method="_on_MH_Down_button_down"]
[connection signal="pressed" from="Shop/PlayerUpgrades/Abilities/Health/MH_Up" to="." method="_on_MH_Up_pressed"]
[connection signal="pressed" from="Shop/PlayerUpgrades/Abilities/MaxSkelly/PMS_down" to="." method="_on_PMS_down_pressed"]
[connection signal="pressed" from="Shop/PlayerUpgrades/Abilities/MaxSkelly/PMS_Up" to="." method="_on_PMS_Up_pressed"]
[connection signal="pressed" from="Shop/PlayerUpgrades/Abilities/FlamingSkull/SkullDown" to="." method="_on_SkullDown_pressed"]
[connection signal="pressed" from="Shop/PlayerUpgrades/Abilities/FlamingSkull/SkullUp" to="." method="_on_SkullUp_pressed"]
[connection signal="pressed" from="Shop/SkellyUpgrades/Abilities/Health/SKHDown" to="." method="_on_SKHDown_pressed"]
[connection signal="pressed" from="Shop/SkellyUpgrades/Abilities/Health/SKHup" to="." method="_on_SKHup_pressed"]
[connection signal="pressed" from="Shop/SkellyUpgrades/Abilities/MaxSkelly/DamageDown" to="." method="_on_DamageDown_pressed"]
[connection signal="pressed" from="Shop/SkellyUpgrades/Abilities/MaxSkelly/DamageUp" to="." method="_on_DamageUp_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/Close" to="." method="_on_Close_pressed"]
